still trying to add the read me correctly

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@ body {
   }
   
   body.dark-mode {
-    background-color:  darkblue; // 
+    background-color:  darkblue; 
     color: #fff;
   }
   
